--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ libc = "0.2"
 libswe-sys = "0.2.7"
 num = "*"
 serde = { version = "1.0.102", features = ["derive"] }
+actix-web = "4.0.0"
 serde_json = "1.0.41"
 serde_derive = "1.0.102"
 strum = "0.17.1"
